[gd_scene load_steps=2 format=2]

[ext_resource path="res://Network.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="client" type="Button" parent="."]
margin_left = 11.0
margin_top = 6.0
margin_right = 226.0
margin_bottom = 36.0
text = "Becom client"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="server" type="Button" parent="."]
margin_left = 7.0
margin_top = 47.0
margin_right = 224.0
margin_bottom = 76.0
text = "Become server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ping" type="Button" parent="."]
margin_left = 302.0
margin_top = 132.0
margin_right = 501.0
margin_bottom = 160.0
text = "Send ping"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 25.0
margin_top = 95.0
margin_right = 65.0
margin_bottom = 109.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="client" to="." method="_on_client_pressed"]
[connection signal="pressed" from="server" to="." method="_on_server_pressed"]
[connection signal="pressed" from="ping" to="." method="_on_ping_pressed"]
